Added updateAddress and addAddress APIs for User
